# skill-nexus

./: .gitignore  .release-it.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  release-please-config.json  tailwind.config.ts  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: actionlint.mjs  bump-version.mjs  check-release-baseline.mjs  sync-version.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: agents.rs  analytics.rs  dependencies.rs  deployments.rs  marketplace.rs  mcp.rs  mod.rs  projects.rs  recommendations.rs  scan.rs  settings.rs  skills.rs  system.rs  testing.rs  tools.rs
src-tauri/src/db/: agents.rs  config.rs  connection.rs  mcp.rs  migrations.rs  mod.rs  models.rs  scans.rs  skills.rs
src-tauri/src/models/: mod.rs
src-tauri/src/modules/: backup.rs  hub.rs  mod.rs  scanner.rs  security.rs  symlink.rs
src-tauri/src/services/: marketplace.rs  mod.rs  parser.rs  scanner.rs  security.rs  syncer.rs  watcher.rs
src/api/: agents.ts  marketplace.ts  mcp.ts  scan.ts  settings.test.ts  settings.ts  skills.ts
src/components/agents/: AgentCard.tsx
src/components/graph/: GraphControls.tsx  GraphLegend.tsx  SkillGraph.tsx
src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
src/components/marketplace/: MarketplaceCard.tsx
src/components/mcp/: McpServerCard.tsx
src/components/security/: ScanResultCard.tsx
src/components/shared/: AppSidebar.tsx  MainLayout.tsx  SkillCard.tsx  StatusBar.tsx
src/components/skills/: SkillCard.tsx
src/hooks/: useDeployments.ts  useGraph.ts  useScan.ts  useSkills.ts
src/i18n/: en.ts  index.test.ts  index.ts  zh.ts
src/lib/: apiError.ts  constants.ts  utils.test.ts  utils.ts
src/pages/: Agents.tsx  Dashboard.tsx  Graph.tsx  Marketplace.tsx  McpServers.tsx  Security.tsx  Settings.tsx  SkillDetail.tsx  Skills.tsx
src/services/: ipc.ts
src/stores/: agentStore.ts  graphStore.ts  mcpStore.ts  skillStore.test.ts  skillStore.ts  uiStore.ts  useAppStore.ts  useUIStore.ts
src/styles/: globals.css
src/types/: index.ts
(+15 files in other folders)
