[package]
name = "skill-nexus"
version = "0.3.0"
description = "Cross-platform Skills visualization management tool"
authors = ["Skill Nexus"]
edition = "2021"

[lib]
name = "skill_nexus_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "skill-nexus"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled", "vtab"] }
walkdir = "2"
notify = { version = "6", features = ["macos_kqueue"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
yaml-rust = "0.4"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
